19_Ingress/19-05_Ingress/wip/store/store08-proj.yaml
# Exercise 19-04 v1.0.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store08-deploy
  namespace: prdstore-ns
  labels:
    app: store-app 
    tier: appserver
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: store08-pod
  template:
    metadata:
      labels:
        pod: store08-pod
    spec:
      containers:
        - name: web-app
          image: nginx:1.24
          ports:
            - name: http 
              containerPort: 80
              protocol: TCP
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: store08-svc
  namespace: prdstore-ns
  labels:
    app: store-app
    tier: appserver
spec:
  selector:
    pod: store08-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
