19_Ingress/19-05_Ingress/wip/store/prdstore-ing.yaml
# Exercise 19-04 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prdstore-ing 
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /store
        backend:
          service:
            name: store08-svc 
            port:
              number: 80
      - pathType: Prefix
        path: /web
        backend:
          service:
            name: web08-svc 
            port:
              number: 80
      - pathType: Prefix
        path: /oe
        backend:
          service:
            name: oe08-svc 
            port:
              number: 8080
